Segundo Commit - Adaptação mobile first para Desktop

--- a/styles/buttons.css
+++ b/styles/buttons.css
@@ -102,6 +102,7 @@
 .btn-close-modal{
     height: 1.875rem;
     width: 2.1875rem;
+    cursor: pointer;
 
     display: flex;
     flex-direction: column;
