--- a/styles/filterArea.css
+++ b/styles/filterArea.css
@@ -17,3 +17,11 @@
     border-radius: var(--radius-1);
     padding: .875rem 1rem;
 }
+
+@media (min-width: 600px){
+    #filterArea > div{
+        display: flex;
+        flex-direction: row;
+        justify-content: space-between;
+    }
+}
