--- a/styles/modal.css
+++ b/styles/modal.css
@@ -4,16 +4,56 @@
     right: 0;
     width: 100%;
     height: 100%;
+
+    display: none;
 }
 
 .modal-card{
     background-color: var(--color-mode);
+    height: max-content;
     width: 90%;
     margin: 10vh auto;
     border-radius: var(--radius-1);
     padding: 1.5rem;
 }
 
+.input-span{
+    display: flex;
+    align-items: center;
+    gap: var(--gap-3);
+}
+
+.currency-input{
+    border: none;
+    width: 100%;
+    height: 90%;
+}
+
+.currency-input:focus-visible{
+    outline-style: none;
+}
+
+
 .modal-submit-btn{
     width: 48%;
+}
+
+.show-modal{
+    display: flex;
+}
+
+@media (min-width: 600px){
+    .modal-card{
+        height: max-content;
+        width: 25rem;
+    }
+
+    .modal-categoty-btn{
+        display: flex;
+        flex-direction: row;
+    }
+
+    .modal-categoty-btn > label{
+        width: 35%;
+    }
 }
