--- a/styles/filterArea.css
+++ b/styles/filterArea.css
@@ -11,8 +11,7 @@
     width: 5.5625rem;
 }
 
-.cardTotal{
-    margin-top: 1.75rem;
+.cardTotal, .cardSaldo{
     border: var(--border-1) solid var(--color-grey-4);
     border-radius: var(--radius-1);
     padding: .875rem 1rem;
