--- a/styles/modal.css
+++ b/styles/modal.css
@@ -15,6 +15,9 @@
     margin: 10vh auto;
     border-radius: var(--radius-1);
     padding: 1.5rem;
+
+    -webkit-animation: flip-diagonal-2-br 0.4s cubic-bezier(0.455, 0.030, 0.515, 0.955) both;
+    animation: flip-diagonal-2-br 0.4s cubic-bezier(0.455, 0.030, 0.515, 0.955) both;
 }
 
 .input-span{
@@ -57,3 +60,24 @@
         width: 35%;
     }
 }
+
+@-webkit-keyframes flip-diagonal-2-br {
+    0% {
+        -webkit-transform: rotate3d(-1, 1, 0, 360deg);
+                transform: rotate3d(-1, 1, 0, 360deg);
+    }
+    100% {
+        -webkit-transform: rotate3d(-1, 1, 0, 0deg);
+                transform: rotate3d(-1, 1, 0, 0deg);
+    }
+  }
+  @keyframes flip-diagonal-2-br {
+    0% {
+        -webkit-transform: rotate3d(-1, 1, 0, 360deg);
+                transform: rotate3d(-1, 1, 0, 360deg);
+    }
+    100% {
+        -webkit-transform: rotate3d(-1, 1, 0, 0deg);
+                transform: rotate3d(-1, 1, 0, 0deg);
+    }
+  }
